[package]
name = "mirams"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
authors = ["Menhera.org Developers"]
repository = "https://github.com/menhera-org/mirams"
description = "Menhera.org Internet Resources Assignment Management System"
homepage = "https://github.com/menhera-org/mirams"

[dependencies]
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
r2d2 = "^0.8"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
argon2 = "0.5"
hex = "0.4.3"
mirams-proc-macros = { workspace = true }

[build-dependencies]
dioxus-cli = "0.5"
dioxus-cli-config = "0.5"

[workspace]

members = [
    "frontend", "proc-macros",
]

[workspace.dependencies]
mirams-proc-macros = { path = "./proc-macros" }
