[package]
name = "mirams"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
authors = ["Menhera.org Developers"]
repository = "https://github.com/menhera-org/mirams"
description = "Menhera.org Internet Resources Assignment Management System"
homepage = "https://github.com/menhera-org/mirams"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
r2d2 = "^0.8"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
argon2 = "0.5"
hex = "0.4.3"
mirams-proc-macros = { path = "./proc-macros", version = "0.1.0" }
pathdiff = "0.2"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
futures-util = "0.3.31"
bytes = "1.7.2"
http = "1.1.0"
http-body-util = "0.1.2"

[build-dependencies]
dioxus-cli = "0.5"
dioxus-cli-config = "0.5"

[workspace]
members = [
    "frontend", "proc-macros",
]
