[package]
name = "mirams-frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
authors = ["Menhera.org Developers"]
repository = "https://github.com/menhera-org/mirams"
description = "Menhera.org Internet Resources Assignment Management System (Frontend)"
homepage = "https://github.com/menhera-org/mirams"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"

