[package]
name = "mirams-frontend"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
authors = ["Menhera.org Developers"]
repository = "https://github.com/menhera-org/mirams"
description = "Menhera.org Internet Resources Assignment Management System (Frontend)"
homepage = "https://github.com/menhera-org/mirams"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
web-sys = { version = "0.3.72", features = ['Location', 'Window'] }
js-sys = "0.3.72"
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.45"

# Debug
dioxus-logger = "0.5.1"
serde-wasm-bindgen = "0.6.5"
url = "2.5.2"

